tests/fixtures/valid/list/list_bool.py
# List of bools
bools: list[bool] = [True, False, True, False]

print(bools[0])
print(bools[1])
print(bools[2])
print(len(bools))
