tests/fixtures/invalid/float_gt_list.py
# Cannot compare with > Float and List[int]
x: bool = 1.0 > [1, 2, 3]
